Frame playback is blank #61594

Closed
opened 2019-02-16 04:51:45 +01:00 by Andrew Price · 9 comments

System Information
Operating system: Win 10
Graphics card: GTX 1070

Blender Version
Broken: Blender 2.8 ec471a9b1c 2019-02-15 23:44
Worked: Blender 2.79

Short description of error
Playback of rendered frames won't display despite image files existing.

Exact steps for others to reproduce the error
Step 1: Render any frame animation (PNG, JPG etc.)
Step 2: After rendering a few frames, stop it then press Ctrl+F11 or go to Render>View Animation

Despite rendered files being fine, they will display as blank in the window.

I can't recall it ever working in 2.8, so it's probably a long outstanding bug.

**System Information** Operating system: Win 10 Graphics card: GTX 1070 **Blender Version** Broken: Blender 2.8 ec471a9b1c14 2019-02-15 23:44 Worked: Blender 2.79 **Short description of error** Playback of rendered frames won't display despite image files existing. **Exact steps for others to reproduce the error** Step 1: Render any frame animation (PNG, JPG etc.) Step 2: After rendering a few frames, stop it then press Ctrl+F11 or go to Render>View Animation Despite rendered files being fine, they will display as blank in the window. I can't recall it ever working in 2.8, so it's probably a long outstanding bug.
Author

Added subscriber: @AndrewPrice

Added subscriber: @AndrewPrice

Added subscriber: @bent

Added subscriber: @bent

I know that it did work for me 2 weeks ago. It was kinda buggy though

I know that it did work for me 2 weeks ago. It was kinda buggy though

Added subscriber: @ZedDB

Added subscriber: @ZedDB

This works for me on linux.
@bent I'm guessing you are on windows too?

@AndrewPrice do you get any error messages if you run blender from cmd with the --debug flag?

This works for me on linux. @bent I'm guessing you are on windows too? @AndrewPrice do you get any error messages if you run blender from `cmd` with the `--debug` flag?
Sergey Sharybin was assigned by Sebastian Parborg 2019-02-16 11:06:04 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Actually nevermind, I can reproduce this too. It seems like it doesn't work with image sequences. If I render to video files, it works.

@Sergey IIRC, you did some work in this area recently?

Actually nevermind, I can reproduce this too. It seems like it doesn't work with image sequences. If I render to video files, it works. @Sergey IIRC, you did some work in this area recently?

This issue was referenced by bab2d2ba43

This issue was referenced by bab2d2ba439ddd991a04c9765a9976e21fa94219

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61594
No description provided.