Fix T61594: Frame playback is blank

Viewport and scissor were never initialized prior to
window move/resize.